rag added